Closed Bug 1352805 Opened 7 years ago Closed 7 years ago

Typo fixes around 'unfortunately'

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: paul.bignier, Assigned: paul.bignier)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20170323105023

Steps to reproduce:

Found typos around the term "unfortunately".
Attachment #8853742 - Attachment is patch: true
Attachment #8853742 - Attachment mime type: text/x-patch → text/plain
Attachment #8853742 - Flags: review?(MattN+bmo)
Comment on attachment 8853742 [details] [diff] [review]
0001-Typo-fixes-around-unfortunately.patch

Review of attachment 8853742 [details] [diff] [review]:
-----------------------------------------------------------------

Please attach a new version for review with a proper commit message[1] and the one revert.

[1] https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Committing_Rules_and_Responsibilities#Commit_message_restrictions

::: security/nss/lib/ckfw/capi/crsa.c
@@ +146,5 @@
>          return CKR_DATA_INVALID;
>      }
>  
>      /* parse the input block to get 1) the hash oid, and 2) the raw hash value.
> +     * unfortunately CAPI doesn't have a builtin function to do this work, so

This looks like it's from a third-party library and nss might still use a different review process so I don't feel confident reviewing this. If you remove this change I will review.
Attachment #8853742 - Flags: review?(MattN+bmo) → feedback+
Assignee: nobody → paul.bignier
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Fingers crossed on the "r=MattN" being enough (not setting it manually)!

Thank you for the info,
Paul
Attachment #8853742 - Attachment is obsolete: true
Pushed by mozilla@noorenberghe.ca:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b8caf0d132b4
Typo fixes in comments around "unfortunately". r=MattN
https://hg.mozilla.org/mozilla-central/rev/b8caf0d132b4
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: