Bug 1352805 - Typo fixes in comments around "unfortunately". r=MattN

MozReview-Commit-ID: B76JuHabq9T